<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCalc</string>
    <string name="action_settings">Settings</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnPlus">+</string>
    <string name="btnMin">-</string>
    <string name="btnMult">*</string>
    <string name="btnDiv">/</string>
    <string name="btnEquals">=</string>
    <string name="btnBack">Bck</string>
    <string name="btnReset">CE</string>
    <string name="btnDot">.</string>
    <string name="lblAnswer"></string>
    <string name="lblanswer">lblAnswer</string>

</resources>
