<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.example.mycalc.MainActivity" >
    
    
    

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
       
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerInParent="true"
        android:columnCount="6"
        android:rowCount="6"
        android:useDefaultMargins="true" >

        <Button
            android:id="@+id/Button1"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="buttonPressed"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/Button2"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="buttonPressed"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/Button3"
            android:layout_column="2"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="buttonPressed"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/ButtonPlus"
            android:layout_column="3"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="actionPressed"
            android:text="@string/btnPlus" />

        <Button
            android:id="@+id/Button4"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="buttonPressed"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/Button5"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="buttonPressed"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/Button6"
            android:layout_column="2"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="buttonPressed"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/ButtonMin"
            android:layout_column="3"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="actionPressed"
            android:text="@string/btnMin" />

        <Button
            android:id="@+id/Button7"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="3"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="buttonPressed"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/Button8"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="3"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="buttonPressed"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/Button9"
            android:layout_column="2"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="3"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="buttonPressed"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/ButtonMult"
            android:layout_column="3"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="3"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="actionPressed"
            android:text="@string/btnMult" />

        <Button
            android:id="@+id/ButtonBck"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="4"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="actionPressed"
            android:text="@string/btnBack" />

        <Button
            android:id="@+id/Button0"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="4"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="buttonPressed"
            android:text="@string/btn0" />

        <Button
            android:id="@+id/ButtonDot"
            android:layout_column="2"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="4"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="actionPressed"
            android:text="@string/btnDot" />

        <Button
            android:id="@+id/ButtonDiv"
            android:layout_column="3"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="4"
            android:background="@drawable/buttongreen"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="actionPressed"
            android:text="@string/btnDiv" />

        <Button
            android:id="@+id/ButtonCE"
            android:layout_width="152dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:layout_row="5"
            android:background="@drawable/buttonred"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="actionPressed"
            android:text="@string/btnReset" />
        
        <Button
            android:id="@+id/ButtonEql"
            android:layout_width="152dp"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="2dp"
            android:layout_row="5"
            android:background="@drawable/buttonblue"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:onClick="actionPressed"
            android:text="@string/btnEquals" />

        <EditText
            android:id="@+id/textField"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="right|center_vertical"
            android:layout_row="0"
            android:background="@drawable/textfield"
            android:clickable="false"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical|right"
            android:inputType="text|numberDecimal"
            android:lines="1"
            android:maxLength="10"
            android:maxLines="1"
            android:text="0"
            android:textAlignment="textStart"
            android:textSize="50sp" >

            <requestFocus />
        </EditText>

        

    </GridLayout>

</RelativeLayout>
